# timeFMPlayground

./: .gitignore  data_processor.ipynb  main.py  predict_timesfm_target.py  pyproject.toml  test_covriate_timesfm_target_forecast.py  test_single_target_forcast  test_single_target_forcast.py  test_timesfm_target_forecast.py  timesfm_target_forecast.py  train_time_series_transformer.py
checkpoints/: best_model.pt
