[project]
name = "pytimesfmproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.4",
    "jax-metal>=0.1.1",
    "numpy>=2.3.5",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "timesfm[torch]",
    "torch>=2.10.0",
]

[tool.uv.sources]
timesfm = { git = "https://github.com/google-research/timesfm.git" }
